# libffi

./: libffi.pc.in  meson.build  msvcc.sh
include/: ffi.h.in  ffi_common.h  meson.build
src/: meson.build  types.c
src/x86/: ffi.c  ffitarget.h  ffiw64.c
